css/main.css
/*user style*/
body { 
    padding-bottom: 70px; 
}
#previews div{
    border: none;    
}
.dz-text-description{
    border: none!important;
    width: 200px;
    max-height: 150px;
    overflow: hidden;
}
.center {
    text-align: center; 
    margin-left: auto; 
    margin-right: auto; 
    margin-bottom: auto; 
    margin-top: auto;

}
footer{
    background-color: white;
}
.switch-wrap-users{
    margin-top: 10px;
}
.enable-copy{
    cursor: text!important;
}
.file-row-handle{
    padding-left: 5px;
    cursor: move;
}
.file-row-highlight{
    display: table-row;
    height: 163px;
}
.album-text{
    margin-top: 20px;
}
.foto-row{
    padding-bottom: 15px;
}
.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

